<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_title_Tmargin"
        android:layout_marginBottom="@dimen/password_title_Bmargin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_title"
        android:singleLine="false"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/new_password"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/create_password" />
</LinearLayout>
